fix(layout): avoid scroll issues on Safari iOS <= 12
add body position fixed only for devices iOS <= 12 to avoid double scrolling and let iOS 13 work
with latest fix for overflow property

re #186

--- a/assets/stylesheets/_layouts--body.scss
+++ b/assets/stylesheets/_layouts--body.scss
@@ -6,3 +6,12 @@ body {
 html {
   overflow-y: initial;
 }
+
+html.device-ios {
+  &.not-support-overflow-hidden {
+    body.modal-open { 
+      position: fixed;
+      width: 100%;
+    }
+  }
+}
